syntax = "proto3";

package patients.v1;

option go_package = "github.com/OPetricevic/physio-tracker/backend/golang/patients;patients";

// Patient represents a person under care.
message Patient {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// Anamnesis represents a single visit/session note.
message Anamnesis {
  string uuid = 1;
  string patient_uuid = 2;
  string note = 3;
  int64 created_at = 4;
}

message CreatePatientRequest {
  string first_name = 1;
  string last_name = 2;
  string phone = 3;
}

message PatientResponse {
  Patient patient = 1;
}

message ListPatientsRequest {
  string query = 1;
}

message ListPatientsResponse {
  repeated Patient patients = 1;
}

message UpdatePatientRequest {
  string uuid = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
}

message DeletePatientRequest {
  string uuid = 1;
}

message AddAnamnesisRequest {
  string patient_uuid = 1;
  string note = 2;
}

message AnamnesisResponse {
  Anamnesis anamnesis = 1;
}

message ListAnamnesesRequest {
  string patient_uuid = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListAnamnesesResponse {
  repeated Anamnesis anamneses = 1;
}

message GeneratePdfRequest {
  string patient_uuid = 1;
  string anamnesis_uuid = 2;
}

message PdfResponse {
  bytes data = 1;
}

message BackupPatientRequest {
  string patient_uuid = 1;
}

message BackupResponse {
  bytes data = 1;
}

service PatientsService {
  rpc CreatePatient(CreatePatientRequest) returns (PatientResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (PatientResponse);
  rpc DeletePatient(DeletePatientRequest) returns (PatientResponse);
  rpc ListPatients(ListPatientsRequest) returns (ListPatientsResponse);

  rpc AddAnamnesis(AddAnamnesisRequest) returns (AnamnesisResponse);
  rpc ListAnamneses(ListAnamnesesRequest) returns (ListAnamnesesResponse);
  rpc GenerateAnamnesisPdf(GeneratePdfRequest) returns (PdfResponse);
  rpc BackupPatient(BackupPatientRequest) returns (BackupResponse);
}
